[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Jintu <jintudas098@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
bcs = "0.1.6"
log = "0.4"
env_logger = "0.9"
hex = "0.4" 

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }

[[bin]]
name = "tic_tac_toe_contract"
path = "src/contract.rs"

[[bin]]
name = "tic_tac_toe_service"
path = "src/service.rs"
